# facial_recognition

./: .gitignore  README.md  main.py  pyproject.toml
facial_recognition/: app.py  constants.py  database.py  serializer.py
facial_recognition/facial_recognition_core/: face_database.py  facial_recognition.py  train_model.py
facial_recognition/model/: face_data.py
facial_recognition/ui/: app.py
facial_recognition/ui/screens/: facial_recognition_screen.py  generate_data_screen.py  train_model_screen.py
facial_recognition/ui/user_controls/: app_bar.py  face_capturer.py  face_data_item.py  facial_recognizer.py  name_text_field.py
facial_recognition/util/: constants.py  document.py  file.py  image.py
