[tool.poetry]
name = "facial-recognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.19.0"
tinydb = "^4.8.0"
pydantic = "^2.5.3"
tinydb-serialization = "^2.1.1"
imutils = "^0.5.4"
humanize = "^4.9.0"
opencv-contrib-python = "^4.9.0.80"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".git",
    ".gitignore",
    ".idea",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP"
]
ignore=[
    "E501"
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"

line-ending = "auto"
